// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar max<min 1`] = `
.c0 {
  height: 5px;
  width: 100%;
  border-radius: 1.25rem;
  background-color: #f5f5f6;
  box-shadow: inset 0 0.1rem 0.1rem rgba(90,97,105,.15);
  overflow: hidden;
}

.c1 {
  height: 100%;
  width: 100%;
  line-height: .625rem;
  color: #fff;
  -webkit-transition: width .6s ease;
  transition: width .6s ease;
}

<div
  class="c0"
  max="0"
  min="5"
  value="0"
>
  <div
    class="c1"
    max="0"
    min="5"
    value="0"
  />
</div>
`;

exports[`ProgressBar primary 1`] = `
.c0 {
  height: 5px;
  width: 100%;
  border-radius: 1.25rem;
  background-color: #f5f5f6;
  box-shadow: inset 0 0.1rem 0.1rem rgba(90,97,105,.15);
  overflow: hidden;
}

.c1 {
  height: 100%;
  width: 0%;
  line-height: .625rem;
  color: #fff;
  background-color: #007bff;
  -webkit-transition: width .6s ease;
  transition: width .6s ease;
}

<div
  class="c0"
  color="primary"
  max="100"
  min="0"
  value="0"
>
  <div
    class="c1"
    color="primary"
    max="100"
    min="0"
    value="0"
  />
</div>
`;

exports[`ProgressBar value<min 1`] = `
.c0 {
  height: 5px;
  width: 100%;
  border-radius: 1.25rem;
  background-color: #f5f5f6;
  box-shadow: inset 0 0.1rem 0.1rem rgba(90,97,105,.15);
  overflow: hidden;
}

.c1 {
  height: 100%;
  width: 0%;
  line-height: .625rem;
  color: #fff;
  -webkit-transition: width .6s ease;
  transition: width .6s ease;
}

<div
  class="c0"
  max="100"
  min="5"
  value="0"
>
  <div
    class="c1"
    max="100"
    min="5"
    value="0"
  />
</div>
`;
